# material-qa

./: .gitignore  README.md  conversation_history.db  conversation_history.db-shm  conversation_history.db-wal  file_utils.py  main.py  pyproject.toml  server.py  the_agents.py  utils.py
prompts/: article_pruner_agent.md  final_synthesizer_agent.md  query_agent.md
src/: __init__.py  file_utils.py  the_agents.py  utils.py
static/: index.html
static/css/: style.css
static/js/: script.js
tools/: wikipedia.py
