[project]
name = "material-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "openai-agents[litellm]>=0.2.7",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]
